--- a/frontend/apps/admin/src/app/categories/categories-list/categories-list.component.html
+++ b/frontend/apps/admin/src/app/categories/categories-list/categories-list.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="admin-page">
   <p-card header="Categories" subheader="List of all categories">
     <div class="p-grid">
@@ -21,16 +22,45 @@
         <p-table [value]="categories" styleClass="p-datatable-gridlines">
           <ng-template pTemplate="header">
             <tr>
-              <th>Id</th>
-              <th>Name</th>
+              <th pSortableColumn="name">
+                Name <p-sortIcon field="name"></p-sortIcon>
+              </th>
               <th>Icon</th>
+              <th>Color</th>
+              <th></th>
             </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-caterory>
+          <ng-template pTemplate="body" let-category>
             <tr>
-              <td>{{ caterory.id }}</td>
-              <td>{{ caterory.name }}</td>
-              <td>{{ caterory.icon }}</td>
+              <td>{{ category.name }}</td>
+              <td>
+                <i
+                  style="font-size: 2rem"
+                  class="pi"
+                  [ngClass]="'pi-' + category.icon"
+                ></i>
+              </td>
+              <td>
+                <i
+                  class="pi pi-circle-on"
+                  style="font-size: 2rem"
+                  [ngStyle]="{ color: category.color }"
+                ></i>
+              </td>
+              <td>
+                <p-button
+                  styleClass="p-button-danger mr-2"
+                  icon="pi pi-trash"
+                  (click)="deleteCategory(category.id)"
+                >
+                </p-button>
+                <p-button
+                  styleClass="p-button-help"
+                  icon="pi pi-pencil"
+                  (click)="updateCategory(category.id)"
+                >
+                </p-button>
+              </td>
             </tr>
           </ng-template>
         </p-table>
@@ -38,3 +68,8 @@
     </div>
   </p-card>
 </div>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
