Refactor api url and update lick cancle

--- a/frontend/apps/admin/src/app/categories/categories-form/categories-form.component.html
+++ b/frontend/apps/admin/src/app/categories/categories-form/categories-form.component.html
@@ -20,6 +20,7 @@
               styleClass="p-button-secondary"
               label="Cancle"
               icon="pi pi-arrow-circle-left"
+              (click)="onCancle()"
             >
             </p-button>
           </div>
