--- a/frontend/apps/admin/src/app/pages/orders/orders-detail/orders-detail.component.html
+++ b/frontend/apps/admin/src/app/pages/orders/orders-detail/orders-detail.component.html
@@ -1,1 +1,90 @@
-<p>orders-detail works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page">
+  <p-card
+    header="View detail Order"
+    subheader="You can update status order"
+  ></p-card>
+  <p-fieldset legend="Order Details" [toggleable]="true" styleClass="mb-4 mt-4">
+    <div class="grid">
+      <div class="col-4">
+        <h5>Order Id</h5>
+        <p>{{ order?.id }}</p>
+      </div>
+      <div class="col-4">
+        <h5>Order Date</h5>
+        <p>{{ order?.dateOrdered | date: 'medium' }}</p>
+      </div>
+      <div class="col-4">
+        <h5>Order Status</h5>
+        <p-dropdown
+          [options]="orderStatus"
+          optionLabel="name"
+          optionValue="id"
+          [(ngModel)]="selectedStatus"
+          (onChange)="onStatusChange($event)"
+        ></p-dropdown>
+      </div>
+      <div class="col-4">
+        <h5>Total Price</h5>
+        <p>{{ order?.totalPrice | currency }}</p>
+      </div>
+    </div>
+  </p-fieldset>
+
+  <p-fieldset legend="Order Item" [toggleable]="true" styleClass="mb-4">
+    <div class="grid mb-5">
+      <div class="col-2 p-text-bold">
+        <h5>Name</h5>
+      </div>
+      <div class="col-2 p-text-bold">
+        <h5>Brand</h5>
+      </div>
+      <div class="col-2 p-text-bold">
+        <h5>Category</h5>
+      </div>
+      <div class="col-2 p-text-bold">
+        <h5>Price</h5>
+      </div>
+      <div class="col-2 p-text-bold">
+        <h5>Quantity</h5>
+      </div>
+      <div class="col-2 p-text-bold">
+        <h5>Subtotal</h5>
+      </div>
+    </div>
+    <div class="grid mb-5" *ngFor="let orderItem of order?.orderItems">
+      <div class="col-2">{{ orderItem.product.name }}</div>
+      <div class="col-2">{{ orderItem.product.brand }}</div>
+      <div class="col-2">{{ orderItem.product.category.name }}</div>
+      <div class="col-2">{{ orderItem.product.price | currency }}</div>
+      <div class="col-2">{{ orderItem.quantity }}</div>
+      <div class="col-2">
+        {{ orderItem.product.price * orderItem.quantity | currency }}
+      </div>
+    </div>
+    <div class="grid p-text-bold" style="color: green">
+      <div class="col-2 col-offset-8">Total Price</div>
+      <div class="col-2">{{ order?.totalPrice | currency }}</div>
+    </div>
+  </p-fieldset>
+
+  <p-fieldset legend="Order Address" [toggleable]="true">
+    <div class="grid">
+      <div class="col-4">
+        <h5>Order Address</h5>
+        <p>{{ order?.shippingAddress1 }}</p>
+        <p>{{ order?.shippingAddress2 }}</p>
+        <p>{{ order?.city }} {{ order?.zip }}</p>
+        <p>{{ order?.country }}</p>
+      </div>
+      <div class="col-4">
+        <h5>Customer infor</h5>
+        <p>{{ order?.user.name }}</p>
+      </div>
+      <div class="col-4">
+        <h5>Contact infor</h5>
+        <p>{{ order?.user.phone }}</p>
+      </div>
+    </div>
+  </p-fieldset>
+</div>
