--- a/frontend/apps/admin/src/app/pages/orders/orders-list/orders-list.component.html
+++ b/frontend/apps/admin/src/app/pages/orders/orders-list/orders-list.component.html
@@ -23,7 +23,12 @@
           <ng-template pTemplate="body" let-order>
             <tr>
               <td>{{ order.user.name }}</td>
-              <td>{{ order.status }}</td>
+              <td>
+                <p-tag
+                  [value]="orderStatus[order.status]?.lable"
+                  [severity]="orderStatus[order.status]?.color"
+                ></p-tag>
+              </td>
               <td>{{ order.dateOrdered | date: 'medium' }}</td>
               <td>{{ order.totalPrice }}</td>
 
@@ -35,9 +40,9 @@
                 >
                 </p-button>
                 <p-button
-                  styleClass="p-button-help"
-                  icon="pi pi-pencil"
-                  (click)="updateOrder(order.id)"
+                  styleClass="p-button-success"
+                  icon="pi pi-eye"
+                  (click)="showOrder(order.id)"
                 >
                 </p-button>
               </td>
