--- a/frontend/apps/ngshop/src/app/shared/header/header.component.html
+++ b/frontend/apps/ngshop/src/app/shared/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header>
+  <div class="grid">
+    <div class="col-3">
+      <img class="logo" src="../../../assets/images/logo.png" alt="" />
+    </div>
+    <div class="col-4">
+      <products-search></products-search>
+    </div>
+    <div class="col-3 col-offset-1 m-5 p-3">
+      <ngshop-nav></ngshop-nav>
+    </div>
+    <div class="col-1 mt-5 p-3">
+      <i class="pi pi-user mr-2"></i>
+      <i class="pi pi-shopping-cart"></i>
+    </div>
+  </div>
+</header>
