--- a/frontend/apps/ngshop/src/app/pages/home-page/home-page.component.html
+++ b/frontend/apps/ngshop/src/app/pages/home-page/home-page.component.html
@@ -1,2 +1,3 @@
-<p class="color-red">home-page works!</p>
-<button pButton type="button" label="Click">Home</button>
+<ui-banner></ui-banner>
+<categories-banner></categories-banner>
+<featured-products></featured-products>
