--- a/frontend/styles/libs/products/index.scss
+++ b/frontend/styles/libs/products/index.scss
@@ -1,4 +1,6 @@
 @import './product-item.scss';
 @import './product-item.scss';
-@import './product.scss';
+@import './product-list.scss';
 @import './products-search.scss';
+@import './categories.scss';
+@import './product-page.scss';
