--- a/frontend/apps/ngshop/src/app/pages/product-list/product-list.component.html
+++ b/frontend/apps/ngshop/src/app/pages/product-list/product-list.component.html
@@ -1,1 +1,26 @@
-<p>product-list works!</p>
+<div class="products-page">
+  <div class="grid">
+    <div class="col-3" *ngIf="!isCategoryPage">
+      <h4>Categories</h4>
+      <div *ngFor="let category of categories" class="field-checkbox">
+        <p-checkbox
+          [(ngModel)]="category.checked"
+          binary="true"
+          [inputId]="category.id"
+          (onChange)="categoryFilter()"
+        ></p-checkbox>
+        <label for="{{ category.id }}">{{ category.name }}</label>
+      </div>
+    </div>
+    <div [class]="!isCategoryPage ? 'col-9' : 'col-12'">
+      <div class="grid">
+        <div
+          [class]="!isCategoryPage ? 'col-4' : 'col-3'"
+          *ngFor="let product of products"
+        >
+          <products-item [product]="product"></products-item>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
