--- a/frontend/styles/shop/shared/header.scss
+++ b/frontend/styles/shop/shared/header.scss
@@ -1,7 +1,13 @@
 header {
   .logo {
-    width: 120px;
+    width: 110px;
     height: 95px;
     margin-left: 20px;
+  }
+  .pi {
+    cursor: pointer;
+    &:hover {
+      color: $primary-color;
+    }
   }
 }
