--- a/frontend/apps/ngshop/src/app/pages/products-details/product-page/product-page.component.html
+++ b/frontend/apps/ngshop/src/app/pages/products-details/product-page/product-page.component.html
@@ -28,7 +28,7 @@
             [(ngModel)]="quantity"
             mode="decimal"
             [showButtons]="true"
-            inputId="minmax-buttons"
+            [inputId]="quantity"
             [min]="1"
             [max]="100"
           >
@@ -50,7 +50,7 @@
           label="Add to cart"
           icon="pi pi-shopping-cart"
           class="ml-2 p-button-outlined p-button-rounded p-button-danger"
-          onclick="onAddToCart()"
+          (click)="onAddToCart()"
         ></button>
       </div>
     </div>
