--- a/frontend/libs/ui/src/lib/product-item/product-item.component.html
+++ b/frontend/libs/ui/src/lib/product-item/product-item.component.html
@@ -10,6 +10,7 @@
       styleClass="mt-4 add-to-cart"
       icon="pi pi-shopping-cart"
       iconPos="right"
+      (onClick)="addProductToCart()"
     ></p-button>
   </div>
 </div>
