--- a/frontend/apps/ngshop/src/app/shared/header/header.component.html
+++ b/frontend/apps/ngshop/src/app/shared/header/header.component.html
@@ -10,8 +10,8 @@
       <ngshop-nav></ngshop-nav>
     </div>
     <div class="col-1 mt-5 p-3">
-      <i class="pi pi-user mr-2"></i>
-      <i class="pi pi-shopping-cart"></i>
+      <i class="pi pi-user mr-1" style="font-size: 1.5rem"></i>
+      <orders-cart-icon></orders-cart-icon>
     </div>
   </div>
 </header>
