--- a/frontend/styles/ngshop.scss
+++ b/frontend/styles/ngshop.scss
@@ -26,7 +26,7 @@
 @import './libs/ui/index.scss';
 @import './libs/products/index.scss';
 @import './libs/users/users.scss';
-@import './libs/orders/orders.scss';
+@import './libs/orders/index.scss';
 
 .container {
   width: 1200px;
