--- a/frontend/apps/ngshop/src/app/app.component.html
+++ b/frontend/apps/ngshop/src/app/app.component.html
@@ -1,6 +1,2 @@
-<orders-messages></orders-messages>
-<div class="container">
-  <ngshop-header></ngshop-header>
-  <router-outlet></router-outlet>
-  <ngshop-footer></ngshop-footer>
-</div>
+<bluebits-home></bluebits-home>
+<router-outlet></router-outlet>
