--- a/frontend/apps/ngshop/src/app/shared/header/header.component.html
+++ b/frontend/apps/ngshop/src/app/shared/header/header.component.html
@@ -6,11 +6,17 @@
     <div class="col-4">
       <products-search></products-search>
     </div>
-    <div class="col-3 col-offset-1 m-5 p-3">
+    <div class="col-3 col-offset-1 mt-5 p-3">
       <ngshop-nav></ngshop-nav>
     </div>
-    <div class="col-1 mt-5 p-3">
-      <i class="pi pi-user mr-1" style="font-size: 1.5rem"></i>
+    <div class="col-1 mt-5 icon">
+      <div class="icon-user">
+        <i class="pi pi-user mr-1" style="font-size: 1.5rem"></i>
+        <ul>
+          <li>User</li>
+          <li [routerLink]="'/history/' + userId">History</li>
+        </ul>
+      </div>
       <orders-cart-icon></orders-cart-icon>
     </div>
   </div>
